Master4429 Mod Files/MinecraftForgeGradle/.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-4f2fe6a        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:19: error: cannot find symbol
	public static final Block SILVER_ORE = (new SilverOreBlock("silver_ore", Material.ROCK));
	                                            ^
  symbol:   class SilverOreBlock
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:20: error: cannot find symbol
	public static final Block CELESTIAL_BRONZE_ORE = (new BlockCelestialBronzeOre("celestial_bronze_ore", Material.ROCK));
	                                                      ^
  symbol:   class BlockCelestialBronzeOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:21: error: cannot find symbol
	public static final Block STYNGIAN_IRON_ORE = (new BlockStygianIronOre("stygian_iron_ore", Material.ROCK));
	                                                   ^
  symbol:   class BlockStygianIronOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:22: error: cannot find symbol
	public static final Block IMPERIAL_GOLD_ORE = (new BlockImperialGoldOre("imperial_gold_ore", Material.ROCK));
	                                                   ^
  symbol:   class BlockImperialGoldOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:23: error: cannot find symbol
	public static final Block ADAMANT_ORE = (new BlockAdamantOre("adamant_ore"));
	                                             ^
  symbol:   class BlockAdamantOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:24: error: cannot find symbol
	public static final Block METEORIC_IRON_ORE = (new BlockMeteoricIronOre("meteoric_iron_ore", Material.ROCK));
	                                                   ^
  symbol:   class BlockMeteoricIronOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:25: error: cannot find symbol
	public static final Block RUBY_ORE = (new BlockRubyOre("ruby_ore", Material.ROCK));
	                                          ^
  symbol:   class BlockRubyOre
  location: class BlockInit
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\EntityInit.java:37: error: cannot find symbol
		EntityRegistry.registerModEntity(new ResourceLocation(Reference.MODID + ":" + name), entity, name, id, Main.instance, range, 1, true, color1, color2);
		                                                               ^
  symbol:   variable MODID
  location: class Reference
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\EntityInit.java:37: error: cannot find symbol
		EntityRegistry.registerModEntity(new ResourceLocation(Reference.MODID + ":" + name), entity, name, id, Main.instance, range, 1, true, color1, color2);
		                                                                                                           ^
  symbol:   variable instance
  location: class Main
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:22: error: constructor MythoCraftTab in class MythoCraftTab cannot be applied to given types;
    public static final MythoCraftTab creativeTab = new MythoCraftTab();
                                                    ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:28: error: cannot find symbol
    public static void preInit(FMLPreInitializationEvent event) {RegistryHandler.preInitRegistries();}
                                                                                ^
  symbol:   method preInitRegistries()
  location: class RegistryHandler
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:30: error: cannot find symbol
    public static void init(FMLInitializationEvent event) {RegistryHandler.initRegistries();}
                                                                          ^
  symbol:   method initRegistries()
  location: class RegistryHandler
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\Main.java:32: error: cannot find symbol
    public static void postInit(FMLPostInitializationEvent event) {RegistryHandler.postInitRegistries();}
                                                                                  ^
  symbol:   method postInitRegistries()
  location: class RegistryHandler
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\MythoCraftTab.java:11: error: incompatible types: Item cannot be converted to ItemStack
	{return ItemInit.IMPERIAL_GOLD_INGOT;}
	                ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\objects\items\ItemBase.java:16: error: cannot find symbol
		setCreativeTab(MythoCraftTab.creativeTab);
		                            ^
  symbol:   variable creativeTab
  location: class MythoCraftTab
Note: C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\objects\blocks\BlockBase.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
15 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 10.475 secs
